--- a/msi/app/src/main/res/layout/database_view.xml
+++ b/msi/app/src/main/res/layout/database_view.xml
@@ -2,11 +2,46 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <Button
         android:id="@+id/create_database"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="点击创建数据库"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/zuozhe"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="作者"/>
+        <EditText
+            android:id="@+id/shuming"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="书名"/>
+        <EditText
+            android:id="@+id/jiage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="价格"/>
+        <EditText
+            android:id="@+id/yeshu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="页数"/>
+        <Button
+            android:id="@+id/add"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="添加书目"/>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/chaxun"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="查询书目列表"/>
 
 </LinearLayout>
